fix z-index css that breaks site permissions menu

--- a/src/components/Callout/Callout.scss
+++ b/src/components/Callout/Callout.scss
@@ -9,7 +9,6 @@
 
 
 .ms-Callout {
-  z-index: $ms-zIndex-Callout;
   margin: 16px auto;
   position: relative;
   width: 288px;
@@ -39,13 +38,8 @@
   }
 
   &:before {
-    z-index: $ms-zIndex-back;
     outline: 1px solid transparent;
     @include drop-shadow;
-  }
-
-  &:after {
-    z-index: $ms-zIndex-front;
   }
 }
 
@@ -132,7 +126,6 @@
   background-color: $ms-color-white;
   box-sizing: border-box;
   outline: 1px solid transparent;
-  z-index: $ms-zIndex-middle;
   @include drop-shadow;
 }
 
@@ -149,7 +142,6 @@
   height: 32px;
   font-size: $ms-font-size-m;
   color: $ms-color-neutralSecondary;
-  z-index: ($ms-zIndex-Callout + $ms-zIndex-front);
 }
 
 .ms-Callout-inner {
@@ -158,7 +150,6 @@
 }
 
 .ms-Callout-header {
-  z-index: ($ms-zIndex-Callout + $ms-zIndex-middle);
   padding: 18px 24px 12px;
 }
 
